--- a/app/index.html
+++ b/app/index.html
@@ -45,14 +45,14 @@
       <div class="container">
         <div class="header__wrapper header__wrapper--bottom">
           <a class="header__logo" href="#">
-            <img class="logo" src="images/logo.svg" alt="Логотип">
+            <img class="header__img" src="images/logo.svg" alt="Логотип">
           </a>
           <a class="header__catalog" href="#">
             Каталог продуктов
           </a>
           <div class="header__search-box">
             <form class="search">
-              <input class="search__input" type="text">
+              <input class="search__input" type="text" placeholder="Найти в магазине ...">
               <button class="search__btn">поиск</button>
             </form>
           </div>
@@ -75,6 +75,72 @@
     </div>
   </header>
 
+
+  <div class="slider__carousel">
+    <div class="slider" style="background-image: url('images/slider-bg-1.jpg');">
+      <div class="container">
+        <div class="slider__wrapper">
+          <div class="slider__box">
+            <h1 class="slider__title">
+              свежачок вам в хату
+              <span class="slider__span">
+               скидка -50%
+              </span>
+            </h1>
+            <div class="slider__text">
+              <p>
+                Только с 7 по 13 июля скидка на сезонные фрукты и овощи до 50%. Торопитесь!
+              </p>
+            </div>
+          </div>
+          <a href="#" class="slider__btn">купить сейчас</a>
+        </div>
+      </div>
+    </div>
+    <div class="slider" style="background-image: url('images/slider-bg-2.jpg');">
+      <div class="container">
+        <div class="slider__wrapper">
+          <div class="slider__box">
+            <h1 class="slider__title">
+              НАКРУТИ СЕБЕ ТОМАТОВ
+              <span class="slider__span">
+                АКЦИЯ: 3 кг по цене 1
+              </span>
+            </h1>
+            <div class="slider__text">
+              <p>
+                Только с 12 по 15 июля скидка на домашние помидорчики
+              </p>
+            </div>
+          </div>
+          <a href="#" class="slider__btn">купить сейчас</a>
+        </div>
+      </div>
+    </div>
+    <div class="slider" style="background-image: url('images/slider-bg-3.jpg');">
+      <div class="container">
+        <div class="slider__wrapper">
+          <div class="slider__box">
+            <h1 class="slider__title">
+              Пусть остальные
+              позеленеют от зависти
+              <span class="slider__span">
+                Распродажа зелени
+              </span>
+            </h1>
+          </div>
+          <a href="#" class="slider__btn">купить сейчас</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+
+  <script src="js/slick.min.js"></script>
   <script src="js/main.min.js"></script>
 </body>
 
