--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,10 @@
 </head>
 
 <body>
+ 
   <!--#include virtual="components/header.html" -->
+ 
+  
 
   <!--#include virtual="components/main-slider.html" -->
 
@@ -18,16 +21,21 @@
   
   <main class="main">
     <!--#include virtual="components/top-products.html" -->
+    
 
     <!--#include virtual="components/promo.html" -->
 
     <!--#include virtual="components/brands.html" -->
 
     <!--#include virtual="components/news.html" -->
+    
   </main>
 
 <!--#include virtual="components/footer.html" -->
-  
+
+<!--  
+<!--#include virtual="components/catalog.html" -->
+  -->
   <script src="js/main.min.js"></script>
 </body>
 
